[package]
name = "hungry_hammers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1        # lowered from 16 as per https://rapier.rs/docs/user_guides/bevy_plugin/common_mistakes/

# But compile the project itself in debug mode if `--release` is not passed in
[profile.dev.package.bevy_platformer]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dependencies]
bevy = "0.6.1"
bevy_rapier2d = { version = "0.12.1", features = [ "render" ] }
